--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -1,8 +1,11 @@
 # This is an <h1> tag
 ##### six sharps
 
-*This text will be italic*
+*This text will be italic.*
 _this will also be italic_
+
+**This text will be bold.**
+__This text as well__
 
 * item 1
 * item 2
