--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -7,6 +7,9 @@ _this will also be italic_
 **This text will be bold.**
 __This text as well__
 
+__**You can combine them.**__
+__Inside **bold** works too.__
+
 * item 1
 * item 2
 	* item 2a
