--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -21,3 +21,10 @@ __Inside **bold** works too.__
 	1. Item 3a
 	1. Item 3b
 
+http://github.com - automatic link generation
+
+As Sejin said:
+
+>Solutionism sucks,
+>Really bad!!
+
