--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -7,8 +7,8 @@ _this will also be italic_
 **This text will be bold.**
 __This text as well__
 
-__**You can combine them.**__
-__Inside **bold** works too.__
+_**You can combine them.**_
+_Inside **bold** works too._
 
 * item 1
 * item 2
