--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -29,5 +29,5 @@ As Sejin said:
 >Really bad!!
 
 I think you should use an
-'<https://www.github.com/sejin8642>' element here instead.
+`<https://www.github.com/sejin8642>` element here instead.
 
