--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -1,4 +1,6 @@
 # Getting Started
 
 ### 1. About Version Control
+* Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. 
+* sexy
 
