--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -2,5 +2,6 @@
 
 ### 1. About Version Control
 * Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. 
-* sexy
+* The simplest VCS (verson control system) is [local VCS](https://git-scm.com/book/en/v2/images/local.png) such as RCS. 
+* s
 
