--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -1,8 +1,14 @@
+disclaimer: this work is a summary of git-scm.com/book. I do not claim the credit of this work.
+
 # Getting Started
 
 ### 1. About Version Control
 * Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. 
 * The simplest VCS (verson control system) is local VCS such as RCS. 
 ![local VCS](https://git-scm.com/book/en/v2/images/local.png)
-* s
+* Centralized VCS (CVCS) enables collaboration with developers. The system has a single server that contains all versioned files, and a number of clients that check out files from the central place.
+![CVCS](https://git-scm.com/book/en/v2/images/centralized.png)
+* Distributed VCS (DVCS) is CVSC, but unlike CVSC, DVCS enables client to fully mirror the repository from the server, including its fully history, to clients' local repository
+![DVCS](https://git-scm.com/book/en/v2/images/distributed.png)
+ 
 
