--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -5,10 +5,16 @@ disclaimer: this work is a summary of git-scm.com/book. I do not claim the credi
 ### 1. About Version Control
 * Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. 
 * The simplest VCS (verson control system) is local VCS such as RCS. 
-![local VCS](https://git-scm.com/book/en/v2/images/local.png)
+![local VCS](https://git-scm.com/book/en/v2/images/local.png) Figure 1. Local VCS
+
 * Centralized VCS (CVCS) enables collaboration with developers. The system has a single server that contains all versioned files, and a number of clients that check out files from the central place.
-![CVCS](https://git-scm.com/book/en/v2/images/centralized.png)
-* Distributed VCS (DVCS) is CVSC, but unlike CVSC, DVCS enables client to fully mirror the repository from the server, including its fully history, to clients' local repository
-![DVCS](https://git-scm.com/book/en/v2/images/distributed.png)
+![CVCS](https://git-scm.com/book/en/v2/images/centralized.png) Figure 2. Centralized VCS
+
+* Distributed VCS (DVCS) is similar to CVSC, but unlike CVSC, DVCS enables client to fully mirror the repository from the server, including its fully history, to clients' local repository
+![DVCS](https://git-scm.com/book/en/v2/images/distributed.png) Figure 3. Distributed VCS
  
+### 2. Getting Started - What is Git?
+* The major difference between Git and any other VCS is that when Git saves the state of your project, Git basically takes a picture of what all your files look like at the moment and stores a reference to that snapshot (most other systems store information as a set of files and the changes made to each file over time).
+![CVCS](https://git-scm.com/book/en/v2/images/deltas.png) Figure 4. Storing data as changes to a base version of each file.
+![GIT](https://git-scm.com/book/en/v2/images/snapshots.png) FIgure 5. Storing data as snapshots of the project over time.
 
