--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -16,5 +16,13 @@ disclaimer: this work is a summary of git-scm.com/book. I do not claim the credi
 ### 2. Getting Started - What is Git?
 * The major difference between Git and any other VCS is that when Git saves the state of your project, Git basically takes a picture of what all your files look like at the moment and stores a reference to that snapshot (most other systems store information as a set of files and the changes made to each file over time).
 ![CVCS](https://git-scm.com/book/en/v2/images/deltas.png) Figure 4. Storing data as changes to a base version of each file.
+
 ![GIT](https://git-scm.com/book/en/v2/images/snapshots.png) FIgure 5. Storing data as snapshots of the project over time.
+
+* Most operations in Git need only local files and resources to operate - generally no information is needed from another computer on your network.
+
+* Everything in Git is checksummed (by SHA-1 hash mechanism) before it is stored and is then referred to by that checksum, making it impossible to change the contents of any file or directory without Git knowing about it. 
+
+* Nearly all Git actions only add data to the Git database, which means that we can experiment without the danger of severely screwing things up.
+
 
