--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -24,4 +24,6 @@ disclaimer: this work is a summary of git-scm.com/book. I do not claim the credi
 
 * Nearly all Git actions only add data to the Git database, which means that we can experiment without the danger of severely screwing things up.
 
+* Git has three main states that your files can reside in: modified, staged, and committed. First you modify files in your working tree, which is a single checkout of one version of the project pulled out of the compressed database in the Git directory and placed on disk. Second you selectively stage just those changes you want to be part of your next commit, which adds only those changes to the staging area. Third you do a commit, which takes the files as they are in the staging area and stores that snapshot permanently to your Git directory.
+![stages](https://git-scm.com/book/en/v2/images/areas.png)
 
