--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -13,7 +13,7 @@ disclaimer: this work is a summary of git-scm.com/book. I do not claim the credi
 * Distributed VCS (DVCS) is similar to CVSC, but unlike CVSC, DVCS enables client to fully mirror the repository from the server, including its fully history, to clients' local repository
 ![DVCS](https://git-scm.com/book/en/v2/images/distributed.png) Figure 3. Distributed VCS
  
-### 2. Getting Started - What is Git?
+### 2. What is Git?
 * The major difference between Git and any other VCS is that when Git saves the state of your project, Git basically takes a picture of what all your files look like at the moment and stores a reference to that snapshot (most other systems store information as a set of files and the changes made to each file over time).
 ![CVCS](https://git-scm.com/book/en/v2/images/deltas.png) Figure 4. Storing data as changes to a base version of each file.
 ![GIT](https://git-scm.com/book/en/v2/images/snapshots.png) FIgure 5. Storing data as snapshots of the project over time.
@@ -25,5 +25,18 @@ disclaimer: this work is a summary of git-scm.com/book. I do not claim the credi
 * Nearly all Git actions only add data to the Git database, which means that we can experiment without the danger of severely screwing things up.
 
 * Git has three main states that your files can reside in: modified, staged, and committed. First you modify files in your working tree, which is a single checkout of one version of the project pulled out of the compressed database in the Git directory and placed on disk. Second you selectively stage just those changes you want to be part of your next commit, which adds only those changes to the staging area. Third you do a commit, which takes the files as they are in the staging area and stores that snapshot permanently to your Git directory.
-![stages](https://git-scm.com/book/en/v2/images/areas.png)
+![stages](https://git-scm.com/book/en/v2/images/areas.png) Figure 6. Working tree, staging area, and Git directory.
+
+### 3. Getting Help 
+* If you need help on Git verbs, use the following commands
+```
+git help <verb>
+git <verb> --help
+man git-<verb>
+```
+
+* If you just need a quick refresher on the available options for a Git command, use `-h` optiopn, as in :
+```
+git add -h
+```
 
