--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -1,4 +1,4 @@
-disclaimer: this work is a summary of git-scm.com/book. I do not claim the credit of this work.
+disclaimer: this work is a summary of git-scm.com/book. I do not claim the credit for this work.
 
 # Getting Started
 
