--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -13,3 +13,9 @@ git add .
 git commit -m "first commit"
 ```
 
+* The following command clones a Git repository from <url> into a Git repository named <dir>:
+```
+git clone <url> <dir>
+```
+If you did not specify <dir>, the default name from <url> will be used.
+
