--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -13,9 +13,13 @@ git add .
 git commit -m "first commit"
 ```
 
-* The following command clones a Git repository from \<url\> into a Git repository named \<dir\>:
+* The following command clones a Git repository from \<url\> into a Git repository named \<dir\> (If you did not specify \<dir\>, the default name from \<url\> will be used).
 ```
 git clone <url> <dir>
 ```
-If you did not specify \<dir\>, the default name from \<url\> will be used.
+
+### 2. Recording Changes to the Repository
+* Each file in your working directory can be in one of two states: tracked or untracked. Track files are files that were in the last snapshopt (ummodified, modified, or staged). Untrack files are everything else.
+![filestatus](https://git-scm.com/book/en/v2/images/lifecycle.png) Figure 7. The lifecycle of the status of your files.
+ 
 
