--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -19,7 +19,10 @@ git clone <url> <dir>
 ```
 
 ### 2. Recording Changes to the Repository
-* Each file in your working directory can be in one of two states: tracked or untracked. Track files are files that were in the last snapshopt (ummodified, modified, or staged). Untrack files are everything else.
+* Each file in your working directory can be in one of two states: tracked or untracked. Track files are files that were in the last snapshopt (ummodified, modified, or staged). Untracked files are everything else.
 ![filestatus](https://git-scm.com/book/en/v2/images/lifecycle.png) Figure 7. The lifecycle of the status of your files.
  
+* Use `git status` command to determine which files are in which state. If you have a new file that you did not stage using `git add <filename>`, it will be listed in untracked files from `git status` output.
+
+* `git add <filename>` will track the new file, and you can check that it will be listed in changes to be committed list from `git status` output. 
 
