--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -24,5 +24,9 @@ git clone <url> <dir>
  
 * Use `git status` command to determine which files are in which state. If you have a new file that you did not stage using `git add <filename>`, it will be listed in untracked files from `git status` output.
 
-* `git add <filename>` will track the new file, and you can check that it will be listed in changes to be committed list from `git status` output. 
+* `git add <filename>` will track the new file, and you can check that it is listed in changes to be committed list from `git status` output. 
+
+* Once you modify a tracked file, it will be listed under changes not staged for commit even if it was added previously. 
+
+* `git status -s` or `git status --short` will give a more simplified output: A for staging area, M for modified files, ?? for untracked files. There are two columns to the output - the left-hand column indicates the status of the staging area and the right-hand column indicates the status of the working tree.
 
