--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -30,3 +30,24 @@ git clone <url> <dir>
 
 * `git status -s` or `git status --short` will give a more simplified output: A for staging area, M for modified files, ?? for untracked files. There are two columns to the output - the left-hand column indicates the status of the staging area and the right-hand column indicates the status of the working tree.
 
+* You can create .gitignore file inside the working tree directory to ignore files you don't want Git know about. Here is the examples:
+```
+# ignore all .a files
+*.a
+
+# but do track lib.a, even though you're ignoring .a files above
+!lib.a
+
+# only ignore the TODO file in the current directory, not subdir/TODO
+/TODO
+
+# ignore all files in any directory named build
+build/
+
+# ignore doc/notes.txt, but not doc/server/arch.txt
+doc/*.txt
+
+# ignore all .pdf files in the doc/ directory and any of its subdirectories
+doc/**/*.pdf
+```
+
