--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -30,7 +30,7 @@ git clone <url> <dir>
 
 * `git status -s` or `git status --short` will give a more simplified output: A for staging area, M for modified files, ?? for untracked files. There are two columns to the output - the left-hand column indicates the status of the staging area and the right-hand column indicates the status of the working tree.
 
-* You can create .gitignore file inside the working tree directory to ignore files you don't want Git know about. Here is the examples:
+* You can create .gitignore file inside the working tree directory to ignore files you don't want Git know about. Here are the examples:
 ```
 # ignore all .a files
 *.a
@@ -50,4 +50,6 @@ doc/*.txt
 # ignore all .pdf files in the doc/ directory and any of its subdirectories
 doc/**/*.pdf
 ```
+* `git diff` command  gives excactly what changes you made to files, but not yet staged. `git diff --staged` (or `git diff --cashed`) command gives you what you staged that will go into your next commit. 
+
 
