--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -52,4 +52,18 @@ doc/**/*.pdf
 ```
 * `git diff` command  gives excactly what changes you made to files, but not yet staged. `git diff --staged` (or `git diff --cashed`) command gives you what you staged that will go into your next commit. 
 
+* `git commit` command commits your staged files to the repository. `-m` option can be added (followed by a commit message). 
+
+* `git commit -a` command stages all modified files and commits the index afterward. 
+
+* `git rm <filename>` removes the file from the working tree and from the index (you can also run `rm <filename>` and `git rm`). The next time you commit, the file will be gone and no longer tracked. If you modified or had already added the file to the staging area, you must force the removal with the `-f` option.
+
+* `git rm --cashed <filename>` removes the file from the index, but the file is kept in the working tree.
+
+* Git doesn't explicitly track file movement. If you rename a file in Git, no metadata is stored in Git that tells it you renamed the file. `git mv file_from file_to` is the same as running these three commands
+```
+mv file_from file_to
+git rm file_from
+git add file_to
+```
 
