simple commit without push

--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -56,7 +56,7 @@ doc/**/*.pdf
 
 * `git commit -a` command stages all modified files and commits the index afterward. 
 
-* `git rm <filename>` removes the file from the working tree and from the index (you can also run `rm <filename>` and `git rm`). The next time you commit, the file will be gone and no longer tracked. If you modified or had already added the file to the staging area, you must force the removal with the `-f` option.
+* `git rm <filename>` removes the file from the working tree and add the file to the index (you can also run `rm <filename>` and `git rm`). It also removes the file from the working directory. The next time you commit, the file will be gone and no longer tracked. If you modified or had already added the file to the staging area, you must force the removal with the `-f` option.
 
 * `git rm --cached <filename>` removes the file from the index, but the file is kept in the working tree.
 
