simple commit without push

--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -69,3 +69,5 @@ git add file_to
 
 ### 3. Viewing the Commit History
 
+* git log lists the commits made in the repository in reverse chronological order. Option `-p` or `--patch` shows what `git diff` would show.
+
