simple commit without push

--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -69,5 +69,6 @@ git add file_to
 
 ### 3. Viewing the Commit History
 
-* git log lists the commits made in the repository in reverse chronological order. Option `-p` or `--patch` shows what `git diff` would show.
+* `git log` lists the commits made in the repository in reverse chronological order. Option `-p` or `--patch` shows what `git diff` would show. `-(any number)` would limit the number of commits to be displayed by the number. `--stat` option shows abbreviated stats. `-pretty=oneline` option prints each commit on a single line.
+
 
