simple commit without push

--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -71,4 +71,6 @@ git add file_to
 
 * `git log` lists the commits made in the repository in reverse chronological order. Option `-p` or `--patch` shows what `git diff` would show. `-(any number)` would limit the number of commits to be displayed by the number. `--stat` option shows abbreviated stats. `-pretty=oneline` option prints each commit on a single line.
 
+* `git log --since=2.weeks` shows the list of commits made in the last two weeks (`git log --until` works simiarly). `--author` option can filter on a specific author, and `--grep` option lets you search for keywords in the commit messages. 
 
+### 4. 
