--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -73,4 +73,8 @@ git add file_to
 * `git log --since=2.weeks` shows the list of commits made in the last two weeks (`git log --until` works simiarly). `--author` option can filter on a specific author, and `--grep` option lets you search for keywords in the commit messages. 
 
 ### 4. Undoing Things
-* `git commit --amend` allows you to redo the previous commit.   
+* `git commit --amend` allows you to redo the previous commit (git add * means add all files in the current directory except for files whose name begin with a dot).
+
+* `git add -A` stages all changes, `git add .` stages new files and modifications without deletions, `git add -u` stages modifications and deletions without new files. `git reset <file>` moves the file from the staging area to its previous place.      
+
+* 
