simple commit without push

--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -75,6 +75,8 @@ git add file_to
 ### 4. Undoing Things
 * `git commit --amend` allows you to redo the previous commit (git add * means add all files in the current directory except for files whose name begin with a dot).
 
-* `git add -A` stages all changes, `git add .` stages new files and modifications without deletions, `git add -u` stages modifications and deletions without new files. `git reset <file>` moves the file from the staging area to its previous place.      
+* `git add -A` stages all changes, `git add .` stages new files and modifications without deletions, `git add -u` stages modifications and deletions without new files. `git reset <file>` moves the file from the staging area to its previous place.
 
-* 
+* `git checkout -- <file>` reverts changes made to the file (Git just replaces that file with the most recently-committed version, meaning any local changes made to the file will be gone). `git checkout <branch>` reverts the branch. If Git can't find a branch, then it will look for a file instead.      
+
+### 5. 
