simple commit with push

--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -79,4 +79,7 @@ git add file_to
 
 * `git checkout -- <file>` reverts changes made to the file (Git just replaces that file with the most recently-committed version, meaning any local changes made to the file will be gone). `git checkout <branch>` reverts the branch. If Git can't find a branch, then it will look for a file instead.      
 
-### 5. 
+### 5. Working with Remotes
+* `git remote` shows remote servers you configured. `-v` option also shows the URLs that Git has stored for the shortname to be used when reading and writing to that remote
+
+* `git remote add <name> <remote_url>` command adds the remote server. 
