simple commit with push

--- a/git_book/ch01.md
+++ b/git_book/ch01.md
@@ -35,7 +35,7 @@ git <verb> --help
 man git-<verb>
 ```
 
-* If you just need a quick refresher on the available options for a Git command, use `-h` optiopn, as in :
+* If you just need a quick refresher on the available options for a Git command, use `-h` optiopn, as in 
 ```
 git add -h
 ```
