--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -82,4 +82,13 @@ git add file_to
 ### 5. Working with Remotes
 * `git remote` shows remote servers you configured. `-v` option also shows the URLs that Git has stored for the shortname to be used when reading and writing to that remote
 
-* `git remote add <name> <remote_url>` command adds the remote server. 
+* `git remote add <name> <remote_url>` command adds the remote server. You can download all the data you currently do not have in your current Git repository to the repository by running `git fetch <name>` from the remote server.
+
+* `git fetch <remote_address>` goes out to that remote project and pulls down all the data from the remote project that you do not ahve yet. 
+
+* `git push <remote> <branch>` command allows you to push your project upstream to share.
+
+* `git remote show <remote>` shows more information about the remote. 
+
+* `git remote rename <name_from> <name_to>` changes remote's shortname. `git remote remove <name>` removes the remote. 
+ 
