--- a/git_book/ch02.md
+++ b/git_book/ch02.md
@@ -91,4 +91,21 @@ git add file_to
 * `git remote show <remote>` shows more information about the remote. 
 
 * `git remote rename <name_from> <name_to>` changes remote's shortname. `git remote remove <name>` removes the remote. 
- 
+
+### 6. Tagging
+* `git tab` (with optional `-l` or `--list`) lists the existing tags.
+
+* A lightweight tag is just a pointer to a specific commit, whereas annotated tags are stored as full objects in the Git database. 
+
+* `git tag -a v1.0 -m "my version 1.0"` creates a simple annotated tag (`-a` option) with the tagging message.
+
+* `git tag v1.1-lw` lightweight-tags the commit.
+
+* You can also tag commits after you've moved past them by specifying the commit checksum (or part of it) when tagging as this: `git tag -a v1.2 <checksum>`
+
+* By default, the `git push` command doesn't transfer tags to remote servers. But you can explicitly push tags by the following command: `git push origin <tagname>`. If you have a lot of tags that you want to push up at once, you can also use the --tags option instead. 
+
+* you can use `git tag -d <tagname>` to delete the tag on your local repository (this does not delete tags on the remote server). Either `git push <remote> :refs/tags/<tagname>` or 'git push origin --delete <tagname>` will delete the tag on the remote server.
+
+* You can `git checkout` a tag to view the version of files that the tag is pointing to (this will put your repository in detached HEAD state.
+
