simple commit with push

--- a/git_book/ch03.md
+++ b/git_book/ch03.md
@@ -9,3 +9,8 @@ disclaimer: this is a summary of git-scm.com for my own studies.
 * You can simply create a branch by executing `git branch <new_branch_name>`. `git branch` shows a list of branch and the branch that you are currently on, pointed by HEAD pointer. 
 
 * `git checkout <branch>` switches to the new branch by redirecting HEAD pointer to that branch.  
+
+### 2. Basic Branching and Mergin
+* You can create a branch and checkout that branch immediately by adding `-b` option: `git checkout -b <branch>`. You can delete the branch by `git branch -d <branch>`. 
+
+ 
