--- a/git_book/ch03.md
+++ b/git_book/ch03.md
@@ -13,4 +13,8 @@ disclaimer: this is a summary of git-scm.com for my own studies.
 ### 2. Basic Branching and Mergin
 * You can create a branch and checkout that branch immediately by adding `-b` option: `git checkout -b <branch>`. You can delete the branch by `git branch -d <branch>`. 
 
+* You can merge another branch into your current branch by `git merge <branch>`. 
+
+* You can use `git mergetool` to resolve merge conflict.
+
  
